// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Custom should add css class shake-horizontal when error props is equal true 1`] = `
<form
  className="Custom shake-horizontal"
>
  <p
    className="display"
  />
  <div
    className="keyboard"
  >
    <div
      className="functions"
    >
      <button
        className="btn"
        data-name="percentage"
        data-value="%"
        onClick={undefined}
        title="percentage"
        type="button"
      >
        %
      </button>
      <button
        className="btn"
        data-name="madd"
        onClick={undefined}
        title="memory plus"
        type="button"
      >
        m+
      </button>
      <button
        className="btn"
        data-name="msubtract"
        onClick={undefined}
        title="memory minus"
        type="button"
      >
        m−
      </button>
      <button
        className="btn"
        data-name="power"
        data-value="^"
        onClick={undefined}
        title="power"
        type="button"
      >
        x
        <span>
          Y
        </span>
      </button>
      <button
        className="btn"
        data-name="mclear"
        onClick={undefined}
        title="memory clear"
        type="button"
      >
        mc
      </button>
      <button
        className="btn"
        data-name="mrecall"
        onClick={undefined}
        title="memory recall"
        type="button"
      >
        mr
      </button>
      <button
        className="btn"
        data-name="sqrt"
        data-value="√"
        onClick={undefined}
        title="square root"
        type="button"
      >
        √
      </button>
      <button
        className="btn double"
        data-name="delete"
        onClick={undefined}
        title="delete"
        type="button"
      >
        delete
      </button>
      <button
        className="btn"
        data-name="pi"
        data-value="π"
        onClick={undefined}
        title="constant PI"
        type="button"
      >
        π
      </button>
      <button
        className="btn double"
        data-name="clear"
        onClick={undefined}
        title="clear"
        type="button"
      >
        clear
      </button>
    </div>
    <div
      className="arithmetic"
    >
      <button
        className="btn"
        data-name="number7"
        data-value="7"
        onClick={undefined}
        title="number 7"
        type="button"
      >
        7
      </button>
      <button
        className="btn"
        data-name="number8"
        data-value="8"
        onClick={undefined}
        title="number 8"
        type="button"
      >
        8
      </button>
      <button
        className="btn"
        data-name="number9"
        data-value="9"
        onClick={undefined}
        title="number 9"
        type="button"
      >
        9
      </button>
      <button
        className="btn"
        data-name="addition"
        data-value="+"
        onClick={undefined}
        title="plus"
        type="button"
      >
        +
      </button>
      <button
        className="btn"
        data-name="multiplication"
        data-value="×"
        onClick={undefined}
        title="times"
        type="button"
      >
        ×
      </button>
      <button
        className="btn"
        data-name="number4"
        data-value="4"
        onClick={undefined}
        title="number 4"
        type="button"
      >
        4
      </button>
      <button
        className="btn"
        data-name="number5"
        data-value="5"
        onClick={undefined}
        title="number 5"
        type="button"
      >
        5
      </button>
      <button
        className="btn"
        data-name="number6"
        data-value="6"
        onClick={undefined}
        title="number 6"
        type="button"
      >
        6
      </button>
      <button
        className="btn"
        data-name="subtraction"
        data-value="-"
        onClick={undefined}
        title="minus"
        type="button"
      >
        −
      </button>
      <button
        className="btn"
        data-name="division"
        data-value="÷"
        onClick={undefined}
        title="divided"
        type="button"
      >
        ÷
      </button>
      <button
        className="btn"
        data-name="number1"
        data-value="1"
        onClick={undefined}
        title="number 1"
        type="button"
      >
        1
      </button>
      <button
        className="btn"
        data-name="number2"
        data-value="2"
        onClick={undefined}
        title="number 2"
        type="button"
      >
        2
      </button>
      <button
        className="btn"
        data-name="number3"
        data-value="3"
        onClick={undefined}
        title="number 3"
        type="button"
      >
        3
      </button>
      <button
        className="btn"
        data-name="parenthesisOpen"
        data-value="("
        onClick={undefined}
        title="parenthesis opening"
        type="button"
      >
        (
      </button>
      <button
        className="btn"
        data-name="parenthesisClose"
        data-value=")"
        onClick={undefined}
        title="parenthesis closing"
        type="button"
      >
        )
      </button>
      <button
        className="btn double"
        data-name="number0"
        data-value="0"
        onClick={undefined}
        title="number 0"
        type="button"
      >
        0
      </button>
      <button
        className="btn"
        data-name="dot"
        data-value="."
        onClick={undefined}
        title="dot"
        type="button"
      >
        .
      </button>
      <button
        className="btn double"
        data-name="equality"
        onClick={undefined}
        title="equals"
        type="button"
      >
        =
      </button>
    </div>
  </div>
</form>
`;

exports[`Custom should render the value of formula into element with css class display 1`] = `
<form
  className="Custom"
>
  <p
    className="display"
  >
    789
  </p>
  <div
    className="keyboard"
  >
    <div
      className="functions"
    >
      <button
        className="btn"
        data-name="percentage"
        data-value="%"
        onClick={undefined}
        title="percentage"
        type="button"
      >
        %
      </button>
      <button
        className="btn"
        data-name="madd"
        onClick={undefined}
        title="memory plus"
        type="button"
      >
        m+
      </button>
      <button
        className="btn"
        data-name="msubtract"
        onClick={undefined}
        title="memory minus"
        type="button"
      >
        m−
      </button>
      <button
        className="btn"
        data-name="power"
        data-value="^"
        onClick={undefined}
        title="power"
        type="button"
      >
        x
        <span>
          Y
        </span>
      </button>
      <button
        className="btn"
        data-name="mclear"
        onClick={undefined}
        title="memory clear"
        type="button"
      >
        mc
      </button>
      <button
        className="btn"
        data-name="mrecall"
        onClick={undefined}
        title="memory recall"
        type="button"
      >
        mr
      </button>
      <button
        className="btn"
        data-name="sqrt"
        data-value="√"
        onClick={undefined}
        title="square root"
        type="button"
      >
        √
      </button>
      <button
        className="btn double"
        data-name="delete"
        onClick={undefined}
        title="delete"
        type="button"
      >
        delete
      </button>
      <button
        className="btn"
        data-name="pi"
        data-value="π"
        onClick={undefined}
        title="constant PI"
        type="button"
      >
        π
      </button>
      <button
        className="btn double"
        data-name="clear"
        onClick={undefined}
        title="clear"
        type="button"
      >
        clear
      </button>
    </div>
    <div
      className="arithmetic"
    >
      <button
        className="btn"
        data-name="number7"
        data-value="7"
        onClick={undefined}
        title="number 7"
        type="button"
      >
        7
      </button>
      <button
        className="btn"
        data-name="number8"
        data-value="8"
        onClick={undefined}
        title="number 8"
        type="button"
      >
        8
      </button>
      <button
        className="btn"
        data-name="number9"
        data-value="9"
        onClick={undefined}
        title="number 9"
        type="button"
      >
        9
      </button>
      <button
        className="btn"
        data-name="addition"
        data-value="+"
        onClick={undefined}
        title="plus"
        type="button"
      >
        +
      </button>
      <button
        className="btn"
        data-name="multiplication"
        data-value="×"
        onClick={undefined}
        title="times"
        type="button"
      >
        ×
      </button>
      <button
        className="btn"
        data-name="number4"
        data-value="4"
        onClick={undefined}
        title="number 4"
        type="button"
      >
        4
      </button>
      <button
        className="btn"
        data-name="number5"
        data-value="5"
        onClick={undefined}
        title="number 5"
        type="button"
      >
        5
      </button>
      <button
        className="btn"
        data-name="number6"
        data-value="6"
        onClick={undefined}
        title="number 6"
        type="button"
      >
        6
      </button>
      <button
        className="btn"
        data-name="subtraction"
        data-value="-"
        onClick={undefined}
        title="minus"
        type="button"
      >
        −
      </button>
      <button
        className="btn"
        data-name="division"
        data-value="÷"
        onClick={undefined}
        title="divided"
        type="button"
      >
        ÷
      </button>
      <button
        className="btn"
        data-name="number1"
        data-value="1"
        onClick={undefined}
        title="number 1"
        type="button"
      >
        1
      </button>
      <button
        className="btn"
        data-name="number2"
        data-value="2"
        onClick={undefined}
        title="number 2"
        type="button"
      >
        2
      </button>
      <button
        className="btn"
        data-name="number3"
        data-value="3"
        onClick={undefined}
        title="number 3"
        type="button"
      >
        3
      </button>
      <button
        className="btn"
        data-name="parenthesisOpen"
        data-value="("
        onClick={undefined}
        title="parenthesis opening"
        type="button"
      >
        (
      </button>
      <button
        className="btn"
        data-name="parenthesisClose"
        data-value=")"
        onClick={undefined}
        title="parenthesis closing"
        type="button"
      >
        )
      </button>
      <button
        className="btn double"
        data-name="number0"
        data-value="0"
        onClick={undefined}
        title="number 0"
        type="button"
      >
        0
      </button>
      <button
        className="btn"
        data-name="dot"
        data-value="."
        onClick={undefined}
        title="dot"
        type="button"
      >
        .
      </button>
      <button
        className="btn double"
        data-name="equality"
        onClick={undefined}
        title="equals"
        type="button"
      >
        =
      </button>
    </div>
  </div>
</form>
`;

exports[`Custom should render without crashing 1`] = `
<form
  className="Custom"
>
  <p
    className="display"
  />
  <div
    className="keyboard"
  >
    <div
      className="functions"
    >
      <button
        className="btn"
        data-name="percentage"
        data-value="%"
        onClick={undefined}
        title="percentage"
        type="button"
      >
        %
      </button>
      <button
        className="btn"
        data-name="madd"
        onClick={undefined}
        title="memory plus"
        type="button"
      >
        m+
      </button>
      <button
        className="btn"
        data-name="msubtract"
        onClick={undefined}
        title="memory minus"
        type="button"
      >
        m−
      </button>
      <button
        className="btn"
        data-name="power"
        data-value="^"
        onClick={undefined}
        title="power"
        type="button"
      >
        x
        <span>
          Y
        </span>
      </button>
      <button
        className="btn"
        data-name="mclear"
        onClick={undefined}
        title="memory clear"
        type="button"
      >
        mc
      </button>
      <button
        className="btn"
        data-name="mrecall"
        onClick={undefined}
        title="memory recall"
        type="button"
      >
        mr
      </button>
      <button
        className="btn"
        data-name="sqrt"
        data-value="√"
        onClick={undefined}
        title="square root"
        type="button"
      >
        √
      </button>
      <button
        className="btn double"
        data-name="delete"
        onClick={undefined}
        title="delete"
        type="button"
      >
        delete
      </button>
      <button
        className="btn"
        data-name="pi"
        data-value="π"
        onClick={undefined}
        title="constant PI"
        type="button"
      >
        π
      </button>
      <button
        className="btn double"
        data-name="clear"
        onClick={undefined}
        title="clear"
        type="button"
      >
        clear
      </button>
    </div>
    <div
      className="arithmetic"
    >
      <button
        className="btn"
        data-name="number7"
        data-value="7"
        onClick={undefined}
        title="number 7"
        type="button"
      >
        7
      </button>
      <button
        className="btn"
        data-name="number8"
        data-value="8"
        onClick={undefined}
        title="number 8"
        type="button"
      >
        8
      </button>
      <button
        className="btn"
        data-name="number9"
        data-value="9"
        onClick={undefined}
        title="number 9"
        type="button"
      >
        9
      </button>
      <button
        className="btn"
        data-name="addition"
        data-value="+"
        onClick={undefined}
        title="plus"
        type="button"
      >
        +
      </button>
      <button
        className="btn"
        data-name="multiplication"
        data-value="×"
        onClick={undefined}
        title="times"
        type="button"
      >
        ×
      </button>
      <button
        className="btn"
        data-name="number4"
        data-value="4"
        onClick={undefined}
        title="number 4"
        type="button"
      >
        4
      </button>
      <button
        className="btn"
        data-name="number5"
        data-value="5"
        onClick={undefined}
        title="number 5"
        type="button"
      >
        5
      </button>
      <button
        className="btn"
        data-name="number6"
        data-value="6"
        onClick={undefined}
        title="number 6"
        type="button"
      >
        6
      </button>
      <button
        className="btn"
        data-name="subtraction"
        data-value="-"
        onClick={undefined}
        title="minus"
        type="button"
      >
        −
      </button>
      <button
        className="btn"
        data-name="division"
        data-value="÷"
        onClick={undefined}
        title="divided"
        type="button"
      >
        ÷
      </button>
      <button
        className="btn"
        data-name="number1"
        data-value="1"
        onClick={undefined}
        title="number 1"
        type="button"
      >
        1
      </button>
      <button
        className="btn"
        data-name="number2"
        data-value="2"
        onClick={undefined}
        title="number 2"
        type="button"
      >
        2
      </button>
      <button
        className="btn"
        data-name="number3"
        data-value="3"
        onClick={undefined}
        title="number 3"
        type="button"
      >
        3
      </button>
      <button
        className="btn"
        data-name="parenthesisOpen"
        data-value="("
        onClick={undefined}
        title="parenthesis opening"
        type="button"
      >
        (
      </button>
      <button
        className="btn"
        data-name="parenthesisClose"
        data-value=")"
        onClick={undefined}
        title="parenthesis closing"
        type="button"
      >
        )
      </button>
      <button
        className="btn double"
        data-name="number0"
        data-value="0"
        onClick={undefined}
        title="number 0"
        type="button"
      >
        0
      </button>
      <button
        className="btn"
        data-name="dot"
        data-value="."
        onClick={undefined}
        title="dot"
        type="button"
      >
        .
      </button>
      <button
        className="btn double"
        data-name="equality"
        onClick={undefined}
        title="equals"
        type="button"
      >
        =
      </button>
    </div>
  </div>
</form>
`;
